# step-one

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bundler.toml
docs/: design.md
step_one/: Cargo.toml
step_one/benches/: seq_bench.rs
step_one/src/: lib.rs  main.rs  params.rs  plugin.rs
step_one/src/seq/: clock.rs  euclidean.rs  held_notes.rs  mod.rs  pending.rs
xtask/src/: main.rs
